@@ -97,7 +97,7 @@ enum LIBSMDEV_BUS_TYPES
 #elif defined( __BORLANDC__ )
 #define LIBSMDEV_LARGE_INTEGER_ZERO			{ 0 }
 
-#elif defined( __MINGW32_VERSION )
+#elif defined( __MINGW32_VERSION ) || defined( __MINGW64_VERSION_MAJOR )
 #define LIBSMDEV_LARGE_INTEGER_ZERO			{ { 0, 0 } }
 
 #endif
